platforms/infrastructure/foundation/kubernetes/manifests/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    eco-base/audit-log-level: minimal
    eco-base/governance-policy: standard-v1
    eco-base/uri: eco-base://k8s/core/ingress/machine-native-ops-ingress
    eco-base/urn: urn:eco-base:k8s:core:ingress:machine-native-ops-ingress:sha256-8d7fc3329ddce61cb94786fd381738b4ef1a1040295a51054bec4c8c2ca68d06
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app.kubernetes.io/app.kubernetes.io/component: ingress
    app.kubernetes.io/component: eco-component
    app.kubernetes.io/instance: eco-instance
    app.kubernetes.io/name: machine-native-ops
    app.kubernetes.io/part-of: eco-base
    app.kubernetes.io/version: 1.0.0
    eco-base/environment: development
    eco-base/governance: aligned
    eco-base/owner: eco-system
    eco-base/part-of: eco-base
    eco-base/platform: core
    governance.machinenativeops.io/charter-version: 2.0.0
  name: machine-native-ops-ingress
  namespace: platform-03
spec:
  ingressClassName: nginx
  rules:
  - host: machinenativeops.io
    http:
      paths:
      - backend:
          service:
            name: aep-engine-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: api.machinenativeops.io
    http:
      paths:
      - backend:
          service:
            name: file-organizer-service
            port:
              number: 80
        path: /file-organizer
        pathType: Prefix
      - backend:
          service:
            name: instant-service
            port:
              number: 80
        path: /instant
        pathType: Prefix
      - backend:
          service:
            name: elasticsearch-search-service
            port:
              number: 80
        path: /search
        pathType: Prefix
      - backend:
          service:
            name: esync-platform-service
            port:
              number: 80
        path: /esync
        pathType: Prefix
